# connect4

./: README.md  cabal.project  connect4.cabal
app/: Main.hs
src/: Connect4.hs
