cabal-version:      3.0
name:               connect4
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         megakilo@gmail.com
author:             Steven Chen
category:           Game

library
    exposed-modules:  Connect4
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base >= 4.7 && < 5,
        deepseq,
        monad-par,
        parallel,
        process,
        transformers

executable connect4
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >= 4.7 && < 5,
        connect4 -any

test-suite connect4-test
    type:             exitcode-stdio-1.0
    main-is:          Connect4Test.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:    base >= 4.7 && < 5
